--- a/about.html
+++ b/about.html
@@ -6,12 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to our cool website</h1>
     <h3>Menu</h3>
-    <ul>
-        <li>
-            <a href="about.html">About</a>
-        </li>
-    </ul>
+    <p>
+        This is About page
+    </p>
+    <a href="index.html">Back</a>
 </body>
 </html>
